--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
+    "firebase": "^5.5.3",
+    "firebaseui": "^3.4.1",
     "fullcalendar": "^3.9.0",
     "moment": "^2.22.2",
     "react": "^16.5.2",
