--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "firebaseui": "^3.4.1",
     "fullcalendar": "^3.9.0",
     "moment": "^2.22.2",
+    "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-firebaseui": "^3.1.2",
     "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.1.8",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "redux": "^4.0.0"
   },
