--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-redux-firebase": "^2.1.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
