--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.22.2",
     "npm": "^6.4.1",
     "react": "^16.5.2",
+    "react-detect-offline": "^2.1.2",
     "react-dom": "^16.5.2",
     "react-firebaseui": "^3.1.2",
     "react-redux": "^5.0.7",
