--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "firebase": "^5.5.3",
     "firebaseui": "^3.4.1",
     "fullcalendar": "^3.9.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "npm": "^6.4.1",
+    "querybase": "^0.6.0",
     "react": "^16.5.2",
     "react-detect-offline": "^2.1.2",
     "react-dom": "^16.5.2",
@@ -32,7 +34,12 @@
     "dev": "webpack --mode development"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "airbnb",
+    "parser": "babel-eslint",
+    "rules": {
+      "indent": 0,
+      "react/jsx-filename-extension" : false
+    }
   },
   "browserslist": [
     ">0.2%",
@@ -40,5 +47,11 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0"
+  }
 }
